Синхронизация ru с en

--- a/manual/ru/introduction/App-Manager.html
+++ b/manual/ru/introduction/App-Manager.html
@@ -64,7 +64,7 @@
 
 
 
-    [anchor:In_Command_Line]
+    [anchor:From_Command_Line]
 
     <h3>Вариант 3. Работа с командной строкой</h3>
 
@@ -73,7 +73,7 @@
     </p>
 
     <code>
-    cd verge3d
+      cd verge3d_blender
     </code>
 
     <p>
@@ -169,7 +169,7 @@
     <img src="files/app-manager/app-manager-create.jpg" class="centered" style="max-width: 569px">
 
     <p>
-      Введите имя для нового приложения и выберите шаблон. По умолчанию предлагается 3 варианта: стандартный светлый или темный, а также на основе кода. Шаблоны могут быть добавлены самостоятельно в специальных настройках.
+      Введите имя для нового приложения и выберите шаблон. По умолчанию предлагается 3 варианта: стандартный светлый или темный, а также на основе кода. Вы можете <a href="manual/en/introduction/App-Manager.html#Templates"> создавать и добавлять дополнительные шаблоны </a>.
     </p>
 
     <img src="files/app-manager/app-manager-create-options.jpg" class="centered" style="max-width: 522px">
@@ -359,7 +359,110 @@
     Приложение будет удалено в Корзину с возможностью ее восстановления.
     </p>
 
+    [anchor:Templates]
 
+    <h2>Шаблоны</h2>
+
+
+
+    [anchor:Whats_a_Template]
+
+    <h3>Что такое шаблоны</h3>
+
+    <p>
+      При создании нового приложения вы можете выбрать шаблон, на основе которого будет создано приложение. По умолчанию предлагается 3 шаблона: "Standard Light", "Standard Dark", and "Code-Based".
+    </p>
+
+    <img src="files/app-manager/app-manager-templates-explanation.jpg" class="centered" style="max-width: 522px">
+
+    <p>
+      Исходные файлы для этих шаблонов можно найти в папке: "verge3d_blender\manager\templates". Вы можете изменить эти файлы или создать совершенно новый шаблон для использования в своем проекте.
+    </p>
+
+    <p class="note">
+      В папке шаблонов также есть скрытый шаблон под названием «Embeddable», который вы можете использовать для создания приложений React.js или Vue.js.
+    </p>
+
+    <p>
+      Есть много способов изменить или улучшить ваш шаблон. Вы можете поменять макет, отредактировав файлы HTML/CSS, используя некоторый код или библиотеку JavaScript. Заменить элементы пользовательского интерфейса или прелоадер, добавив несколько пазлов, которые будут включены в каждое новое приложение по умолчанию.
+    </p>
+
+
+
+    [anchor:Creating_Templates]
+
+    <h3>Создание шаблонов</h3>
+
+    <p>
+      Чтобы создать свой шаблон, нажмите кнопку *Manage App Templates* на левой панели:
+    </p>
+
+    <img src="files/app-manager/app-manager-templates.jpg" class="centered" style="max-width: 751px">
+
+    <p>
+      На открывшейся панели кликните <strong>+Template</strong> и укажите имя для нового шаблона (например, "My Template"), затем нажмите *Apply*:
+    </p>
+
+    <img src="files/app-manager/app-manager-templates-manage.jpg" class="centered" style="max-width: 656px">
+
+    <p>
+      В дальнейшем, при создании нового приложения, будет появляться возможность выбрать свой шаблон:
+    </p>
+
+    <img src="files/app-manager/app-manager-templates-choose-created.jpg" class="centered" style="max-width: 522px">
+
+    <p>
+      По умолчанию для вашего приложения будет создана пустая папка. Самый простой способ продолжить - это скопировать один из существующих шаблонов (например, "Standard Dark") и переименовать дубликат в соответствии с именем вашего шаблона (т.е. "My Template").
+    </p>
+
+
+
+    [anchor:App_Manager_Settings]
+
+    <h2>Настройки менеджера приложений</h2>
+
+
+
+    <p>
+      Нажав кнопку шестеренки на левой панели, вы можете открыть панель с различными настройками:
+    </p>
+
+    <img src="files/app-manager/app-manager-settings.jpg" class="centered" style="max-width: 751px">
+
+    <p>
+      По умолчанию это выглядит так:
+    </p>
+
+    <img src="files/app-manager/app-manager-settings-panel.jpg" class="centered" style="max-width: 612px">
+
+    <dl>
+
+      <dt>Notify about Verge3D updates</dt>
+
+      <dd>Диспетчер приложений отобразит уведомление, если доступна новая стабильная версия Verge3D (опция по умолчанию активна).</dd>
+
+
+      <dt>Upload app sources (models, puzzles, backups)</dt>
+
+      <dd> Функция <a href="manual/ru/introduction/App-Manager.html#Publish"> Publish </a> загрузит файлы, которые обычно не нужны для запуска приложения в сети Интернет и поэтому пропускаются по умолчанию. Сюда входят .blend, .max, .ma/.mb, visual_logic.xml и содержимое папки v3d_app_data. Включите опцию, если хотите поделиться исходными файлами со своими коллегами. </dd>
+
+      <dt>Enable external server interface</dt>
+
+      <dd> Используйте IP-адрес в Wi-Fi или локальной сети вместо <a href="http://localhost:8668" target="_blank"> localhost: 8668 </a>. Вы можете найти IP-адрес своего компьютера в настройках операционной системы: <a href="https://www.groovypost.com/howto/find-windows-10-device-ip-address/" target="_blank"> Win 10 </a>, <a href = "https://www.groovypost.com/howto/microsoft/windows-7/find-your-local-ip-address-windows-7-cmd/" target = "_ blank "> Win 7 </a>, <a href="https://www.wikihow.com/Find-Your-IP-Address-on-a-Mac" target="_blank"> Mac </a>, <a href="https://www.linuxtrainingacademy.com/determine-public-ip-address-command-line-curl/" target="_blank"> Linux </a>. Запустите менеджер приложений, перейдя к сетевому адресу, например: <a href="http://192.168.1.15:8668" target="_blank"> 192.168.1.15:8668 </a> </dd>
+
+      <dt>Verge3D Network cache age (minutes)</dt>
+
+      <dd> Устанавливает период времени, по истечении которого Verge3D Network будет обновлять повторно загруженное приложение. Установите значение 0 (мгновенное обновление) для более быстрых итераций в разработке. </dd>
+
+      <dt>External applications directory</dt>
+
+      <dd> Использовать указанный абсолютный путь (например, C:\Users\Alex\ my_verge) для папки приложений вместе со стандартной (например, verge3d_blender\applications). Папки из указанного каталога будут отображаться в списке приложений менеджера приложений. </dd>
+
+
+      <dt>Current theme</dt>
+      <dd> Выбор темы (светлый и темный режимы) для менеджера приложений и редактора пазлов. </dd>
+
+    </dl>
 
     <h2>Все еще есть вопросы?</h2>
 
