--- a/manual/ru/introduction/Asset-compression.html
+++ b/manual/ru/introduction/Asset-compression.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <title>Verge3D Asset Compression - Soft8Soft</title>
     <meta charset="utf-8">
@@ -168,7 +168,7 @@
     </p>
 
     <p>
-      To compress a file you can right click it, and then choose "7-Zip" -> "Add to arcive..." - this
+      To compress a file you can right click it, and then choose "7-Zip" -> "Add to archive..." - this
       opens the corresponding dialog window:
     </p>
 
