--- a/manual/ru/introduction/FAQ.html
+++ b/manual/ru/introduction/FAQ.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <title>Frequently Asked Questions on Verge3D - Soft8Soft</title>
     <meta charset="utf-8">
@@ -114,14 +114,14 @@
 
     <h3>Cannot load app when I launch it by clicking on the .html file.</h3>
 
-    <p>See the answer on the question <a href="manual/ru/introduction/FAQ.html#app_browser_security">above</a>.</p>
+    <p>See the answer on the question <a href="manual/en/introduction/FAQ.html#app_browser_security">above</a>.</p>
 
     [anchor:standalone_html]
 
     <h3>Can I export my scene to a standalone all-in HTML file?</h3>
 
     <p>
-    Nope, there is no all-in HTML format offered by Verge3D. If you need a standalone executable you can try to convert it with <a href="https://electronjs.org/" target="_blank">Electron</a>.
+    Nope, there is no all-in HTML format offered by Verge3D. If you need a standalone executable you can try to convert it with <a href="https://www.electronjs.org/docs/tutorial/application-distribution#manual-distribution" target="_blank">Electron</a>.
     </p>
 
     [anchor:cinema4d]
@@ -156,7 +156,7 @@
     <h3>How can I copy Puzzles into another project?</h3>
 
     <p>
-    You can use the <a href="manual/ru/puzzles/Library.html">Library</a> feature for that.
+    You can use the <a href="manual/en/puzzles/Library.html">Library</a> feature for that.
     </p>
 
 
@@ -165,7 +165,7 @@
     <h3>Sound is not played on iOS...</h3>
 
     <p>
-    See how to fix that <a href="manual/ru/introduction/Workflow.html#Audio_">here</a>.
+    See how to fix that <a href="manual/en/introduction/Workflow.html#Audio_">here</a>.
     </p>
 
 
@@ -173,7 +173,7 @@
 
     <h3>My app is laggy and slow. How do I increase its performance?</h3>
 
-    <p>Check out this <a href="manual/ru/introduction/Optimizing-WebGL-performance.html">assets optimization guide</a>.</p>
+    <p>Check out this <a href="manual/en/introduction/Optimizing-WebGL-performance.html">assets optimization guide</a>.</p>
 
 
     [anchor:browser_console]
@@ -247,9 +247,9 @@
     <p>Check out the following guides for more info:</p>
 
     <ul>
-      <li><a href="manual/ru/blender/GLTF-Materials.html">Creating glTF-compatible materials in Blender</a></li>
-      <li><a href="manual/ru/max/GLTF-Materials.html">Creating glTF-compatible materials in 3ds Max</a></li>
-      <li><a href="manual/ru/maya/GLTF-Materials.html">Creating glTF-compatible materials in Maya</a></li>
+      <li><a href="manual/en/blender/GLTF-Materials.html">Creating glTF-compatible materials in Blender</a></li>
+      <li><a href="manual/en/max/GLTF-Materials.html">Creating glTF-compatible materials in 3ds Max</a></li>
+      <li><a href="manual/en/maya/GLTF-Materials.html">Creating glTF-compatible materials in Maya</a></li>
     </ul>
 
     [anchor:gltf_or_glb]
