--- a/manual/ru/max/GLTF-Materials.html
+++ b/manual/ru/max/GLTF-Materials.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <title>Verge3D for 3ds Max: glTF Materials (glTF 2.0-compliant PBR) - Soft8Soft</title>
     <meta charset="utf-8">
@@ -14,7 +14,7 @@
     <h1>glTF Materials (glTF 2.0-compliant PBR) / 3ds Max</h1>
 
     <p>
-    If your content needs to be compatible with glTF 2.0 standard <a href="manual/ru/introduction/FAQ.html#gltf_materials">for some reason</a>, you can use physical materials for this purpose as described below.
+    If your content needs to be compatible with glTF 2.0 standard <a href="manual/en/introduction/FAQ.html#gltf_materials">for some reason</a>, you can use physical materials for this purpose as described below.
     </p>
 
     <img src="files/physical-material/phmat_00.png">
@@ -120,6 +120,14 @@
     <img src="files/physical-material/phmat_09.png">
 
     <p>When exporting textures from Substance Painter, choose *Verge3d for 3ds Max* in the export dialog window so that all generated textures are compatible with the glTF 2.0 standard Verge3D is based on.</p>
+
+
+    [anchor:export_to_gltf_in_runtime]
+
+    <h2>Export to glTF in Runtime</h2>
+
+    <p>With *export to gltf* puzzle you can export your models or the entire scene in realtime. Then you can download the exported model or upload to the server for permanent storage. See more in the puzzle's <a href="manual/en/puzzles/Scenes.html#export_to_gltf">reference</a>.</p>
+
 
 
     <h2>Got Questions?</h2>
