--- a/manual/ru/maya/Animation.html
+++ b/manual/ru/maya/Animation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <title>Verge3D for Maya: Animation - Soft8Soft</title>
     <meta charset="utf-8">
@@ -56,7 +56,7 @@
     <img src="files/animation-maya/skeletal-animation.jpg" alt="Inserting keyframes for skeletal animation in Verge3D for Maya" class="centered" style="max-width: 592px">
 
     <p>
-      Skeletons can be animated directly by setting transformation keys on joints or by utilizing auxillary controllers such as IK handles/effectors. To animate joints indirectly, enable their *Custom Frame Range*</a> property in the attribute editor and set proper *From*/*To* as frame values. See <a href="manual/ru/maya/Animation.html#Verge3D_Per_Object_Settings">here</a> for more info.
+      Skeletons can be animated directly by setting transformation keys on joints or by utilizing auxillary controllers such as IK handles/effectors. To animate joints indirectly, enable their *Custom Frame Range*</a> property in the attribute editor and set proper *From*/*To* as frame values. See <a href="manual/en/maya/Animation.html#Verge3D_Per_Object_Settings">here</a> for more info.
     </p>
 
     [anchor:Blend_Shape_Animation]
@@ -64,7 +64,7 @@
     <h3>Blend Shape Animation</h3>
 
     <p>
-      You can add <a href="manual/ru/maya/Blend-Shapes.html">blend shapes</a> to an object in standard ways in Maya and then animate their weights using keyframes.
+      You can add <a href="manual/en/maya/Blend-Shapes.html">blend shapes</a> to an object in standard ways in Maya and then animate their weights using keyframes.
     </p>
 
     <img src="files/animation-maya/blend-shape-animation.jpg" alt="Shape key animation in Verge3D for Maya" class="centered" style="max-width: 681px">
@@ -75,16 +75,15 @@
     <h3>Material Animation</h3>
 
     <p>
-      Keyframed material animation is not supported in Verge3D for Maya yet. However, by using procedural animation and the <a href='manual/ru/puzzles/Materials.html#materials_set_color'>set color</a> or <a href='manual/ru/puzzles/Materials.html#materials_set_value'>set value</a> puzzles you can manipulate material parameters in real time.
+      To use keyframed material animation, simply set key on any material parameter.
     </p>
-
 
     [anchor:Procedural_Animation]
 
     <h3>Procedural Animation</h3>
 
     <p>
-      Instead of playing back some animation which was pre-made in Maya, you can use Puzzles or JavaScript to modify coordinates or some other parameters with time. Particulurly, the <a href="manual/ru/puzzles/Animation.html#animate_param">animate param</a> puzzle (based on the Tween.js library) is a convenient way to create your own animation on the fly.
+      Instead of playing back some animation which was pre-made in Maya, you can use Puzzles or JavaScript to modify coordinates or some other parameters with time. Particulurly, the <a href="manual/en/puzzles/Animation.html#animate_param">animate param</a> puzzle (based on the Tween.js library) is a convenient way to create your own animation on the fly.
     </p>
 
     <img src="files/puzzles/puzzles-animation-animate-param.jpg" alt="Using the animate param puzzle to create animation in Verge3D for Maya" class="centered" style="max-width: 1000px">
@@ -168,13 +167,13 @@
     <h2>Animation Control with Puzzles</h2>
 
     <p>
-      You can use <a href="manual/ru/puzzles/Animation.html">animation puzzles</a> for playing back a pre-made animation (click on the link for more details).
+      You can use <a href="manual/en/puzzles/Animation.html">animation puzzles</a> for playing back a pre-made animation (click on the link for more details).
     </p>
 
     <img src="files/puzzles/puzzles-animation.jpg" alt="Animation puzzles of Verge3D" class="centered" style="max-width: 1000px">
 
     <p>
-      Animation can also be implemented with other visual scripting blocks - see <a href="manual/ru/puzzles/Camera.html">Camera</a> and <a href="manual/ru/puzzles/Time.html">Time</a> puzzles.
+      Animation can also be implemented with other visual scripting blocks - see <a href="manual/en/puzzles/Camera.html">Camera</a> and <a href="manual/en/puzzles/Time.html">Time</a> puzzles.
     </p>
 
     <h2>Got Questions?</h2>
