--- a/manual/ru/maya/Installation.html
+++ b/manual/ru/maya/Installation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <title>Verge3D for Maya: Installation - Soft8Soft</title>
     <meta charset="utf-8">
@@ -23,10 +23,10 @@
     <h3>Maya</h3>
 
     <p>
-    Verge3D works on top of Autodesk Maya 2017-2020 which should be installed first. If this is not the case, you can download a free trial bundle from Autodesk's <a href="https://www.autodesk.com/products/maya/free-trial" target="_blank">website</a>, or try Verge3D for Blender instead.
+    Verge3D works on top of Autodesk Maya 2017-2021 which should be installed first. If this is not the case, you can download a free trial bundle from Autodesk's <a href="https://www.autodesk.com/products/maya/free-trial" target="_blank">website</a>, or try Verge3D for Blender instead.
     </p>
 
-    <p>We recommend using the latest version of Maya (2020 at the time of writing) for best results.</p>
+    <p>We recommend using the latest stable version of Maya (2020 at the time of writing) for best results.</p>
 
     <h3>Operating system</h3>
 
@@ -49,16 +49,6 @@
     <p>
     <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">Download</a> the Verge3D bundle and double click on the <strong>.exe</strong> file to run the installer.
     </p>
-
-    <p>
-    There is a known issue on Win 10 when Windows Defender may refuse to run the installer (we are working on it). If you see a blue warning window like on the picture below, click the *More info* link:
-    </p>
-
-    <img src="files/installation-maya/installer-maya-windows-defender-issue1.jpg" class="centered" style="max-width: 1000px">
-
-    <p>and then press the *Run anyway* button:</p>
-
-    <img src="files/installation-maya/installer-maya-windows-defender-issue2.jpg" class="centered" style="max-width: 1000px">
 
     <p>
     Choose an installation folder that have enough permissions for reading and writing (or better leave it by default). Installing in a system directory such as "Program Files" or "Desktop" is not recommended.
@@ -103,8 +93,14 @@
     <p>Go to <em>Path_To_Verge3D_Installation/maya_plugin/setup</em> directory and execute the <em>regPlugPath.py</em> script as follows</p>
 
     <code>
-      ../../python/mac/bin/python3 ./regPlugPath.py
+      python3 ./regPlugPath.py
     </code>
+
+    <p>If the Python interpreter is not installed on your system, the script will invoke Python3 installation procedure:</p>
+
+    <img src="files/installation-maya/installer-macos-python-prompt.jpg" class="centered" style="max-width: 410px">
+
+    <p>Press the *Install* button. Wait until Python is installed. Finally, run the <em>regPlugPath.py</em> script again.</p>
 
     <p>
     Once the installation is complete, you may open Maya. If you had it running, be sure to close and open it again. Now go to *Plug-in Manager* settings...
@@ -196,7 +192,7 @@
 
     <h2>What's Next</h2>
 
-    <p>Familiarize yourself with the <a href="manual/ru/maya/Beginners-Guide.html">basics</a>!</p>
+    <p>Familiarize yourself with the <a href="manual/en/maya/Beginners-Guide.html">basics</a>!</p>
 
 
 
