--- a/manual/ru/maya/Lighting-and-Rendering.html
+++ b/manual/ru/maya/Lighting-and-Rendering.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <title>Verge3D for Maya: Lighting and Rendering - Soft8Soft</title>
     <meta charset="utf-8">
@@ -80,7 +80,7 @@
       <li>*Spot Lights* - *Color*, *Intensity*, *Decay Rate*, *Cone Angle* and *Penumbra Angle* attributes are supported in Verge3D.</li>
     </ul>
 
-    <p>In addition, you can assign Depth Map Shadow Attributes on Directional, Point and Spot lights. See <a href="manual/ru/maya/Shadows.html">here</a> for more info.
+    <p>In addition, you can assign Depth Map Shadow Attributes on Directional, Point and Spot lights. See <a href="manual/en/maya/Shadows.html">here</a> for more info.
 
 
     [anchor:background]
@@ -119,6 +119,7 @@
       <li>*MSAA 8x* - prefer multisample anti-aliasing with 8x samples if the target hardware supports it.</li>
       <li>*MSAA 16x* - prefer multisample anti-aliasing with 16x samples if the target hardware supports it.</li>
       <li>*FXAA* - force FXAA.</li>
+      <li>*None* - disable anti-aliasing.</li>
     </ul>
 
     <p>*Use HDR Rendering* - enable high-dynamic-range rendering.</p>
@@ -143,7 +144,7 @@
     </p>
 
     <p>
-      To use object outlining (and optional glowing) in your Verge3D application, first enable the effect on the Blender's *Render Properties* panel, then use the <a href="manual/ru/puzzles/Objects.html#outline">outline</a> puzzle to apply it to your object(s).
+      To use object outlining (and optional glowing) in your Verge3D application, first enable the effect on the Blender's *Render Properties* panel, then use the <a href="manual/en/puzzles/Objects.html#outline">outline</a> puzzle to apply it to your object(s).
     </p>
 
     <p class="note">
@@ -170,7 +171,7 @@
 
     <p>*Render Hidden Edge* — enable/disable rendering of the outline edge behind other scene objects.</p>
 
-    <p class="note">Though it's possible to render glowing objects, in the most cases the outline rendering is used to improve visual clarity of your scene. If you need glowing from lamps or another bright objects, consider using the <a href="manual/ru/puzzles/Postprocessing.html#bloom">bloom post-processing</a> instead.</p>
+    <p class="note">Though it's possible to render glowing objects, in the most cases the outline rendering is used to improve visual clarity of your scene. If you need glowing from lamps or another bright objects, consider using the <a href="manual/en/puzzles/Postprocessing.html#bloom">bloom post-processing</a> instead.</p>
 
 
     [anchor:per_object_rendering_settings]
