--- a/manual/ru/puzzles/Text.html
+++ b/manual/ru/puzzles/Text.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <title>Text Puzzles Reference - Soft8Soft</title>
     <meta charset="utf-8">
@@ -40,13 +40,13 @@
     <img src="files/puzzles/puzzles-text-text.jpg" style="max-width: 1000px">
 
     <p>
-    The text puzzle is often used with puzzles from different categories. Particularly, you can specify URL inputs to <a href='manual/ru/puzzles/Scenes.html'>scene loader puzzles</a>, HTML element ids, CSS rules and colors to <a href='manual/ru/puzzles/HTML.html'>HTML puzzles</a>, and ids and URLs to some other puzzles.
+    The text puzzle is often used with puzzles from different categories. Particularly, you can specify URL inputs to <a href='manual/en/puzzles/Scenes.html'>scene loader puzzles</a>, HTML element ids, CSS rules and colors to <a href='manual/en/puzzles/HTML.html'>HTML puzzles</a>, and ids and URLs to some other puzzles.
     </p>
 
     <img src="files/puzzles/puzzles-text-text-example2.jpg" style="max-width: 1000px">
 
     <p>
-    This puzzle can also be used to provide names for objects, materials, animations or groups instead of the relevant <a href='manual/ru/puzzles/Selectors.html'>selector puzzles</a>, which may come in handy for dynamically loaded content.
+    This puzzle can also be used to provide names for objects, materials, animations or groups instead of the relevant <a href='manual/en/puzzles/Selectors.html'>selector puzzles</a>, which may come in handy for dynamically loaded content.
     </p>
 
     <img src="files/puzzles/puzzles-text-text-example.jpg" style="max-width: 1000px">
@@ -56,6 +56,25 @@
     </p>
 
     <img src="files/puzzles/puzzles-text-text-example3.jpg" style="max-width: 1000px">
+
+
+    [anchor:text_multiline]
+
+    <h3>text multi-line</h3>
+
+    <p>
+        This puzzle provides the means to supply some text to your Puzzles
+        scenario. The puzzle uses <a href='https://ace.c9.io/'>Ace Editor</a>
+        for displaying and editing the content. See the relevant keyboard
+        shortcuts here: <a href='https://github.com/ajaxorg/ace/wiki/Default-Keyboard-Shortcuts'>Default Keyboard Shortcuts</a>.
+    </p>
+
+    <p>
+        The puzzle supports CSS, HTML, Javascript and plain text highlighting
+        modes, which can be switched on the fly.
+    </p>
+
+    <img src="files/puzzles/puzzles-text-text-multiline.jpg" style="max-width: 1000px">
 
 
     [anchor:create_text]
@@ -80,7 +99,7 @@
     <h3>append text</h3>
 
     <p>
-    This puzzle adds the given text to the specified <a href='manual/ru/puzzles/Variables.html'>variable</a>.
+    This puzzle adds the given text to the specified <a href='manual/en/puzzles/Variables.html'>variable</a>.
     </p>
 
     <img src="files/puzzles/puzzles-text-append-text.jpg" style="max-width: 1000px">
@@ -150,7 +169,7 @@
     <h3>is empty</h3>
 
     <p>
-    This puzzle checks whether the given text is empty (has length 0). The result is *true* if this is the case and *false* if not. For using with <a href='manual/ru/puzzles/Logic.html'>Logic</a> puzzles.
+    This puzzle checks whether the given text is empty (has length 0). The result is *true* if this is the case and *false* if not. For using with <a href='manual/en/puzzles/Logic.html'>Logic</a> puzzles.
     </p>
 
     <img src="files/puzzles/puzzles-text-is-empty.jpg" style="max-width: 1000px">
@@ -268,7 +287,7 @@
 
     <h3>new line</h3>
 
-    <p>A newline character (also called "end of line" or "line break" character). Use this character inside the <a href="manual/ru/puzzles/Text.html#create_text">create text</a> or <a href="manual/ru/puzzles/Text.html#append_text">append text</a> puzzles to create multiline texts.</p>
+    <p>A newline character (also called "end of line" or "line break" character). Use this character inside the <a href="manual/en/puzzles/Text.html#create_text">create text</a> or <a href="manual/en/puzzles/Text.html#append_text">append text</a> puzzles to create multiline texts.</p>
 
     <img src="files/puzzles/puzzles-text-new-line.jpg" style="max-width: 681px">
 
