--- a/manual/ru/blender/Camera.html
+++ b/manual/ru/blender/Camera.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <title>Verge3D for Blender: Working with Camera - Soft8Soft</title>
     <meta charset="utf-8">
@@ -28,7 +28,7 @@
 
     <img src="files/camera-blender/active-camera.jpg" alt="Setting active camera in Verge3D for Blender" class="centered" style="max-width: 309px">
 
-    <p>This camera will be used to render your scene by default, though you can add more cameras and switch between them in runtime using the <a href="manual/ru/puzzles/Camera.html#set_active_camera">set active camera</a> puzzle.</p>
+    <p>This camera will be used to render your scene by default, though you can add more cameras and switch between them in runtime using the <a href="manual/en/puzzles/Camera.html#set_active_camera">set active camera</a> puzzle.</p>
 
     <p>Verge3D supports the following camera types:</p>
 
@@ -74,13 +74,16 @@
     <p>*Target Object/Point* - specify pivot point or pivot object which will be used for Orbit camera.</p>
 
     <p>
-      *Min Dist* and *Max Dist* - distance limits for Orbit camera.
+      *Min Dist* and *Max Dist* - distance limits for perspective camera.
     </p>
     <p>
-      *Vertical Rotation Limits* - vertical angle limits for Orbit camera.
+      *Min Zoom* and *Max Zoom* - zoom limits for orthographic camera.
     </p>
     <p>
-      *Horizontal Rotation Limits* - horizontal angle limits for Orbit camera.
+      *Vertical Rotation Limits*: *Min Angle* and *Max Angle* - vertical angle limits.
+    </p>
+    <p>
+      *Horizontal Rotation Limits*: *Min Angle* and *Max Angle* - horizontal angle limits.
     </p>
 
 
@@ -100,7 +103,7 @@
     <h2>Camera Control with Puzzles</h2>
 
     <p>
-      You can use <a href="manual/ru/puzzles/Camera.html">camera puzzles</a> to control your camera in real time.
+      You can use <a href="manual/en/puzzles/Camera.html">camera puzzles</a> to control your camera in real time.
     </p>
 
     <h2>Got Questions?</h2>
