--- a/manual/ru/introduction/Useful-links.html
+++ b/manual/ru/introduction/Useful-links.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <title>Useful links to Verge3D resources - Soft8Soft</title>
     <meta charset="utf-8">
@@ -84,6 +84,9 @@
         [link:https://www.linkedin.com/company/soft8soft/ Soft8Soft on LinkedIn] — the company profile page.
       </li>
       <li>
+        [link:https://discord.gg/TaG7QY8 Verge3D on Discord] — community-driven discussion channel.
+      </li>
+      <li>
         [link:https://www.instagram.com/soft8soft/ Soft8Soft on Instagram] — fresh Verge3D and WebGL news, Sneak Peek shots, behind the scenes photos and videos.
       </li>
       <li>
@@ -147,7 +150,7 @@
 
     <h2>Blender, 3ds Max, Maya</h2>
     <ul>
-      <li><a href="https://docs.blender.org/manual/ru/latest/" target="_blank">Blender Reference Manual</a> — official Blender manual.</li>
+      <li><a href="https://docs.blender.org/manual/en/latest/" target="_blank">Blender Reference Manual</a> — official Blender manual.</li>
       <li><a href="http://help.autodesk.com/view/3DSMAX/2020/ENU/" target="_blank">3ds Max Learning Center</a> — comprehensive 3ds Max guide from Autodesk.</li>
       <li><a href="https://help.autodesk.com/view/MAYAUL/2020/ENU/" target="_blank">Maya Help</a> — official guide for using Autodesk Maya.</li>
     </ul>
