--- a/manual/ru/max/Camera.html
+++ b/manual/ru/max/Camera.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <title>Verge3D for 3ds Max: Working with Camera - Soft8Soft</title>
     <meta charset="utf-8">
@@ -40,22 +40,29 @@
     <h2>Camera Settings</h2>
 
     <p>
-      Each camera in 3ds Max is assigned with Verge3D settings:
+      Each camera in 3ds Max is assigned with the following Verge3D settings:
     </p>
 
-    <img src="files/camera-max/camera-settings.jpg" alt="Camera settings in Verge3D for 3ds Max" class="centered" style="max-width: 351px">
+    <img src="files/camera-max/camera-settings.jpg" alt="Camera settings in Verge3D for 3ds Max" class="centered" style="max-width: 329px">
 
     <p>*Allow Panning* - allow camera panning.</p>
-    <p>*Rotate Speed* - camera rotation speed factor.</p>
-    <p>*Move Speed* - camera movevent speed factor.</p>
-    <p>*Pivot Distance Limits* - distance limits for Orbit camera.</p>
-    <p>*Vertical Angle Limits* - vertical angle limits for Orbit camera.</p>
-    <p>*Horizontal Angle Limits* - horizontal angle limits for Orbit camera.</p>
+    <p>*Rot. Speed* - camera rotation speed factor.</p>
+    <p>*Mov. Speed* - camera movevent speed factor.</p>
+    <p>*Disable Controls* - disable any controls. Specify if you're going to move your camera with animations, Puzzles or JavaScript.</p>
 
+
+    [anchor:orbit_settings]
+
+    <h3>Orbit Camera Settings</h3>
+
+    <p>*Persp Min Dist* and *Persp Max Dist* - distance limits for perspective camera.</p>
+    <p>*Ortho Min Zoom* and *Ortho Max Zoom* - zoom limits for orthographic camera.</p>
+    <p>*Min Vertical Angle* and *Max Vertical Angle* - vertical (up-down) angle limits.</p>
+    <p>*Min Horizon Angle* and *Max Horizon Angle* - horizontal (left-right) angle limits.</p>
 
     [anchor:firstperson_settings]
 
-    <h3>First-person camera settings</h3>
+    <h3>First-Person Camera Settings</h3>
 
     <p>*Enabled* - enable first-person camera.</p>
 
@@ -66,12 +73,13 @@
     <p>*Story Height* - story height.</p>
 
 
+
     [anchor:camera_control_with_puzzles]
 
     <h2>Camera Control with Puzzles</h2>
 
     <p>
-      You can use <a href="manual/ru/puzzles/Camera.html">camera puzzles</a> to control your camera in real time.
+      You can use <a href="manual/en/puzzles/Camera.html">camera puzzles</a> to control your camera in real time.
     </p>
 
     <h2>Got Questions?</h2>
