--- a/manual/ru/max/Installation.html
+++ b/manual/ru/max/Installation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <title>Verge3D for 3ds Max: Installation - Soft8Soft</title>
     <meta charset="utf-8">
@@ -51,19 +51,7 @@
     <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">Download</a> the Verge3D bundle and double click on the <strong>.exe</strong> file to run the installer.
     </p>
 
-    <img src="files/installation_3ds_max/installer-max-starting.jpg" class="centered" style="max-width: 499px">
-
-    <p>
-    There is a known issue on Win 10 when Windows Defender may refuse to run the installer (we are working on it). If you see a blue warning window like on the picture below, click the *More info* link:
-    </p>
-
-    <img src="files/installation_3ds_max/installer-max-windows-defender-issue1.jpg" class="centered" style="max-width: 920px">
-
-    <p>
-    and then press the *Run anyway* button:
-    </p>
-
-    <img src="files/installation_3ds_max/installer-max-windows-defender-issue2.jpg" class="centered" style="max-width: 920px">
+    <img src="files/installation_3ds_max/installer-max-starting.jpg" class="centered" style="max-width: 500px">
 
     <p>
     Choose an installation folder that have enough permissions for reading and writing (or better leave it by default). Installing in a system directory such as "Program Files" or "Desktop" is not recommended.
@@ -81,7 +69,7 @@
     As of version 2.15, you may also launch the App Manager without running 3ds Max by clicking on the desktop icon or using the Start menu.
     </p>
 
-    <img src="files/installation_3ds_max/app-manager-desktop-launcher.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/installation_3ds_max/app-manager-desktop-launcher.jpg" class="centered">
 
 
 
@@ -182,14 +170,14 @@
     In order to remove Verge3D files, as well as the desktop icon and the Start menu entry, from your computer, you may use the standard *Add or remove programs* function of Windows. It won't touch the *applications* and *puzzles* folders where user files are stored, so you may remove them manually if you don't need them anymore.
     </p>
 
-    <img src="files/installation_3ds_max/uninstalling-max.jpg" class="centered" style="max-width: 824px">
+    <img src="files/installation_3ds_max/uninstalling-max.jpg" class="centered" style="max-width: 802px">
 
 
 
     <h2>What's Next</h2>
 
     <p>
-    Familiarize yourself with the <a href="manual/ru/max/Beginners-Guide.html">basics</a>!
+    Familiarize yourself with the <a href="manual/en/max/Beginners-Guide.html">basics</a>!
     </p>
 
 
