--- a/manual/ru/max/Morphing.html
+++ b/manual/ru/max/Morphing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <title>Verge3D for 3ds Max: Morphing - Soft8Soft</title>
     <meta charset="utf-8">
@@ -30,7 +30,15 @@
     <h2>Setting Up</h2>
 
     <p>
-    In 3ds Max, add a <a href="https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/3DSMax-Modifiers/files/GUID-506247E2-1F5D-4857-998E-8256FD88626D-htm.html" target="_blank">Morpher modifier</a>, and setup the channels for morph targets. Please notice that due to hardware constraints, the total number of active shape keys is limited to 6. During rendering, the engine selects 6 shape keys with largest influences ignoring all excessive shape keys.
+        In 3ds Max, add a <a href="https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/3DSMax-Modifiers/files/GUID-506247E2-1F5D-4857-998E-8256FD88626D-htm.html" target="_blank">Morpher modifier</a>,
+        and setup the channels for morph targets. Please notice that due to
+        hardware constraints, the total number of active morph targets is
+        limited. Most of the time it's 5 morph targets for skinned objects and 6
+        for others. See <a href="manual/en/introduction/Hardware-Related-Issues.html#too_many_attributes">this topic</a>
+        for more information about calculating the limit in more complex cases.<br/><br/>
+
+        During rendering, the engine selects 6 morph targets with largest
+        influences ignoring all excessive morph targets.
     </p>
 
     <img src="files/morphing-max/morpher-modifier.jpg" alt="Morphing in Verge3D for 3ds Max" class="centered" style="max-width: 1000px">
@@ -41,7 +49,7 @@
     <h2>Controlling via Puzzles</h2>
 
     <p>
-    To manipulate your morph targets in real-time there are two puzzles: <a href="manual/ru/puzzles/Objects.html#get_morph_factor">get morph factor</a> and <a href="manual/ru/puzzles/Objects.html#set_morph_factor">set morph factor</a>. See the demo called "Parametric Models" for more details.
+    To manipulate your morph targets in real-time there are two puzzles: <a href="manual/en/puzzles/Objects.html#get_morph_factor">get morph factor</a> and <a href="manual/en/puzzles/Objects.html#set_morph_factor">set morph factor</a>. See the demo called "Parametric Models" for more details.
     </p>
 
 
