--- a/manual/ru/maya/Camera.html
+++ b/manual/ru/maya/Camera.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <title>Verge3D for Maya: Working with Camera - Soft8Soft</title>
     <meta charset="utf-8">
@@ -61,13 +61,16 @@
     </ul>
 
     <p>
-      *Rotate Speed* - camera rotation speed factor.
+      *Rotation Speed* - camera rotation speed factor.
     </p>
     <p>
-      *Move Speed* - camera movevent speed factor.
+      *Movement Speed* - camera movevent speed factor.
     </p>
     <p>
-      *Pivot Distance Limits* - distance limits for Orbit camera.
+      *Perspective Distance Limits* - distance limits for perspective Orbit camera.
+    </p>
+    <p>
+      *Orthographic Zoom Limits* - zoom limits for othographic Orbit camera.
     </p>
     <p>
       *Vertical Angle Limits* - vertical angle limits for Orbit camera.
@@ -76,8 +79,15 @@
       *Horizontal Angle Limits* - horizontal angle limits for Orbit camera.
     </p>
 
+    <p>*Collision Material* - collision material which will be used for the first-person camera.</p>
+
+    <p>*Gaze Level* - first-person camera "gaze" (or "head"/"eyes") level.</p>
+
+    <p>*Story Height* - first-person camera story height.</p>
+
+
     <p>
-      *Render Background* - enable to configure background color in Verge3D. See more information about this feature <a href="manual/ru/maya/Lighting-and-Rendering.html#Background">here</a>.
+      *Render Background* - enable to configure background color in Verge3D. See more information about this feature <a href="manual/en/maya/Lighting-and-Rendering.html#Background">here</a>.
     </p>
 
 
@@ -86,7 +96,7 @@
     <h2>Camera Control with Puzzles</h2>
 
     <p>
-      You can use <a href="manual/ru/puzzles/Camera.html">camera puzzles</a> to control your camera in real time.
+      You can use <a href="manual/en/puzzles/Camera.html">camera puzzles</a> to control your camera in real time.
     </p>
 
     <h2>Got Questions?</h2>
