--- a/manual/ru/maya/Materials.html
+++ b/manual/ru/maya/Materials.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <title>Verge3D for Maya: Materials - Soft8Soft</title>
     <meta charset="utf-8">
@@ -17,25 +17,28 @@
 
     <ul>
       <li>
-        <a href="manual/ru/maya/Materials.html#aiStandardSurface">aiStandardSurface</a>
+        <a href="manual/en/maya/Materials.html#aiStandardSurface">aiStandardSurface</a>
       </li>
       <li>
-        <a href="manual/ru/maya/Materials.html#standardSurface">Standard Surface</a> (Maya 2020+ only)
+        <a href="manual/en/maya/Materials.html#standardSurface">Standard Surface</a> (Maya 2020+ only)
       </li>
       <li>
-        <a href="manual/ru/maya/Materials.html#lambert">Lambert</a>
+        <a href="manual/en/maya/Materials.html#lambert">Lambert</a>
       </li>
       <li>
-        <a href="manual/ru/maya/Materials.html#blinn_phong">Blinn, Phong, Phong E</a>
+        <a href="manual/en/maya/Materials.html#blinn_phong">Blinn, Phong, Phong E</a>
       </li>
       <li>
         Surface Shader
       </li>
       <li>
+        aiFlat
+      </li>
+      <li>
         aiMixShader
       </li>
       <li>
-        aiFlat
+        aiRaySwitch
       </li>
     </ul>
 
@@ -44,46 +47,94 @@
 
     <ul>
       <li>
-        File
-      </li>
-      <li>
         2d Placement
-      </li>
-      <li>
-        Bump 2d
-      </li>
-      <li>
-        Ramp
-      </li>
-      <li>
-        Sampler Info
-      </li>
-      <li>
-        Layered Texture
-      </li>
-      <li>
-        Color Composite
-      </li>
-      <li>
-        Float Composite
-      </li>
-      <li>
-        Color Constant
-      </li>
-      <li>
-        Float Constant
-      </li>
-      <li>
-        aiNormalMap
-      </li>
-      <li>
-        aiFacingRatio
       </li>
       <li>
         animCurveTA
       </li>
       <li>
         animCurveTU
+      </li>
+      <li>
+        Blend Colors
+      </li>
+      <li>
+        Bump 2d
+      </li>
+      <li>
+        Channels (part of lookdevKit plugin)
+      </li>
+      <li>
+        Checker
+      </li>
+      <li>
+        Clamp
+      </li>
+      <li>
+        Color Composite (part of lookdevKit plugin)
+      </li>
+      <li>
+        Color Constant (part of lookdevKit plugin)
+      </li>
+      <li>
+        Color Math (part of lookdevKit plugin)
+      </li>
+      <li>
+        Condition
+      </li>
+      <li>
+        Env Sphere
+      </li>
+      <li>
+        File
+      </li>
+      <li>
+        Float Composite (part of lookdevKit plugin)
+      </li>
+      <li>
+        Float Constant (part of lookdevKit plugin)
+      </li>
+      <li>
+        Float Math (part of lookdevKit plugin)
+      </li>
+      <li>
+        Gamma Correct
+      </li>
+      <li>
+        Layered Texture
+      </li>
+      <li>
+        Multiply Divide
+      </li>
+      <li>
+        Premultiply (part of lookdevKit plugin)
+      </li>
+      <li>
+        Ramp
+      </li>
+      <li>
+        Reverse
+      </li>
+      <li>
+        Sampler Info
+      </li>
+      <li>
+        Set Range
+      </li>
+      <li>
+        Unpremultiply (part of lookdevKit plugin)
+      </li>
+      <li>
+        Unit Conversion
+      </li>
+      <li>
+        aiFacingRatio
+      </li>
+      <li>
+        aiNormalMap
+      </li>
+      <li>
+        <a href="manual/en/maya/Materials.html#aiOslShader">aiOslShader</a>
       </li>
     </ul>
 
@@ -145,7 +196,7 @@
       <dt>Dithering</dt>
       <dd>reduce banding artifacts by using pixel dithering.</dd>
       <dt>glTF 2.0 Compatible</dt>
-      <dd>force the material to be glTF 2.0 compatible. See the <a href="manual/ru/maya/GLTF-Materials.html">following guide</a> for more information.</dd>
+      <dd>force the material to be glTF 2.0 compatible. See the <a href="manual/en/maya/GLTF-Materials.html">following guide</a> for more information.</dd>
     </dl>
 
     [anchor:standardSurface]
@@ -178,6 +229,15 @@
     </p>
 
 
+    [anchor:aiOslShader]
+
+    <h2>aiOslShader</h2>
+
+    <p>
+      Node to create custom OSL shaders.
+    </p>
+
+
     [anchor:performance_considerations]
 
     <h2>Performance Considerations</h2>
@@ -185,7 +245,7 @@
     <p>Being the only choice for creating nice and realistic renders, *Standard Surface* (or *aiStandardSurface*) nevertheless require more computing power from your GPU and slows down app loading. This is especially true for scenes with lots of such materials.</p>
 
     <p>
-      To improve performance you can tweak <a href="manual/ru/maya/Lighting-and-Rendering.html#environment_lighting">Texture Resolution</a> or <a href="manual/ru/maya/Lighting-and-Rendering.html#global_rendering_settings">IBL Environment Mode</a> property.
+      To improve performance you can tweak <a href="manual/en/maya/Lighting-and-Rendering.html#environment_lighting">Texture Resolution</a> or <a href="manual/en/maya/Lighting-and-Rendering.html#global_rendering_settings">IBL Environment Mode</a> property.
     </p>
 
     <h2>Got Questions?</h2>
