мелкие фиксы manual/ru/introduction/Puzzles-Visual-Logic-Editor

--- a/manual/ru/introduction/Puzzles-Visual-Logic-Editor.html
+++ b/manual/ru/introduction/Puzzles-Visual-Logic-Editor.html
@@ -413,8 +413,7 @@
 
     <p>
 
-      257/5000
-      Это позволяет вам восстановить любую из ранее сохраненных версий ваших пазлов, когда появится необходимость. Просто скопируйте файл обратно в корень папки приложения и удалите отметку времени из его имени. Ваши пазлы будут обновлены после обновления редактора.
+      Это позволяет вам восстановить любую из ранее сохраненных версий ваших пазлов, когда появится необходимость. Просто скопируйте файл обратно в корень папки приложения и удалите отметку времени из его имени. Ваши пазлы будут обновлены после обновления страницы редактора.
     </p>
 
 
