--- a/manual/ru/introduction/Useful-links.html
+++ b/manual/ru/introduction/Useful-links.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Useful links to Verge3D resources - Soft8Soft</title>
+    <title>Полезные ссылки на ресурсы Verge3D - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Here is the links to Verge3D news channels, tutorials, articles and other useful resources."/>
+    <meta name="description" content="Ссылки на новостные каналы Verge3D, руководства, статьи и другие полезные ресурсы."/>
     <base href="../../../" />
     <script src="list.js"></script>
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
-    <h1>Useful Links</h1>
+    <h1>Полезные ресурсы</h1>
 
     <div class="desc">
-      The following is a collection of Verge3D resources that you might find useful.<br />
+      Коллекция ресурсов Verge3D, которые могут оказаться вам полезными.<br />
     </div>
 
     [contents]
@@ -21,39 +21,38 @@
 
     [anchor:forums]
 
-    <h2>Forums</h2>
+    <h2>Форумы</h2>
     <div>
-      Use [link:https://www.soft8soft.com/forums/ Verge3D forums] for discussions, questions, feature requests or jobs. This is also a good place to showcase your projects.
-    </div>
+      Используйте [link:https://www.soft8soft.com/forums/ форумы Verge3D] для обсуждения, запросов новых функций или вакансий. Это также хорошее место для демонстрации ваших проектов.    </div>
 
 
     [anchor:tutorials]
 
-    <h2>Tutorials</h2>
+    <h2>Уроки</h2>
 
 
     [anchor:beginner_level]
 
-    <h3>Beginner Level</h3>
+    <h3>Для начинающих</h3>
     <ul>
       <li>
-        <a href="https://www.youtube.com/playlist?list=PLMnTV0uuRMhRH6p4DSW-AEcQZEulzm461" target="_blank">Verge3D for Blender Basics</a> video course.
+        Видеокурс: <a href="https://www.youtube.com/playlist?list=PLskL2N-CFZDFwtlMHYm25bJKds8Hq5gKW" target="_blank">Основы Verge3D для Blender</a>.
       </li>
       <li>
-        <a href="https://www.youtube.com/playlist?list=PLMnTV0uuRMhR2zhXxPqAD8G9wp_LNIXZc" target="_blank">Verge3D for 3ds Max Basics</a> video course.
+        Видеокурс: <a href="https://www.youtube.com/playlist?list=PLMnTV0uuRMhR2zhXxPqAD8G9wp_LNIXZc" target="_blank">Verge3D for 3ds Max Basics</a>.
       </li>
       <li>
-        <a href="https://www.youtube.com/playlist?list=PLMnTV0uuRMhS89ra_kYqKPYbpCv2Eh5GO" target="_blank">Verge3D for Maya Basics</a> video course.
+        Видеокурс: <a href="https://www.youtube.com/playlist?list=PLskL2N-CFZDHvy29Jl2boKHLEZQK7GAVY" target="_blank">Основы Verge3D для Maya</a>.
       </li>
     </ul>
 
 
     [anchor:advanced_level]
 
-    <h3>Advanced Level</h3>
+    <h3>Для опытных</h3>
     <ul>
       <li>
-        <a href="https://www.soft8soft.com/making-3d-product-configurator-for-woocommerce/" target="_blank">Making 3D Product Configurator for WooCommerce</a> (<a href="https://www.youtube.com/watch?v=dJdUKwSxA8c" target="_blnak">video version</a>).
+        <a href="https://www.soft8soft.com/making-3d-product-configurator-for-woocommerce/" target="_blank">Making 3D Product Configurator for WooCommerce</a> (<a href="https://www.youtube.com/watch?v=dJdUKwSxA8c" target="_blnak">Видеоверсия</a>.
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=U6aGboR_sHE" target="_blank">Creating interactive interior visualisation</a> (Verge3D for Blender).
@@ -69,56 +68,56 @@
 
     [anchor:social_media]
 
-    <h2>Social Media</h2>
+    <h2>Социальные сети</h2>
     <ul>
       <li>
-        [link:https://www.facebook.com/soft8soft/ Verge3D on Facebook] — our main channel for news and updates on Verge3D.
+        [link:https://www.facebook.com/soft8soft/ Verge3D в Facebook] - наш основной канал новостей и обновлений о Verge3D.
       </li>
       <li>
-        [link:https://twitter.com/soft8soft/ Verge3D on Twitter] — follow us on Twitter to get the most essential information about Verge3D development.
+        [link:https://twitter.com/soft8soft/ Verge3D в Twitter] — подпишитесь на нас в Twitter, чтобы получать самую важную информацию о разработке Verge3D.
       </li>
       <li>
-        Official [link:https://www.youtube.com/c/soft8soft/ YouTube channel] — tutorials and screencasts of the best Verge3D applications.
+        Official [link:https://www.youtube.com/channel/UCqrdIbDZUSGr_fiT_aGOT9Q канал YouTube] — уроки и обзоры лучших приложений Verge3D.
       </li>
       <li>
-        [link:https://www.linkedin.com/company/soft8soft/ Soft8Soft on LinkedIn] — the company profile page.
+        [link:https://www.linkedin.com/company/soft8soft/ Soft8Soft в LinkedIn] — страница нашей компании.
       </li>
       <li>
-        [link:https://discord.gg/TaG7QY8 Verge3D on Discord] — community-driven discussion channel.
+        [link:https://discord.gg/TaG7QY8 Verge3D в Discord] — канал обсуждения, управляемый сообществом.
       </li>
       <li>
-        [link:https://www.instagram.com/soft8soft/ Soft8Soft on Instagram] — fresh Verge3D and WebGL news, Sneak Peek shots, behind the scenes photos and videos.
+        [link:https://www.instagram.com/soft8soft/ Soft8Soft в Instagram] — свежие новости Verge3D и WebGL, фотографии и видео «за кадром».
       </li>
       <li>
-        [link:https://www.reddit.com/r/verge3d/ Verge3D on Reddit] — a subreddit maintained by Verge3D community.
+        [link:https://www.reddit.com/r/verge3d/ Verge3D на Reddit] — сабреддит, поддерживаемый сообществом Verge3D.
       </li>
     </ul>
     <p>
-      Also use <strong>#verge3d</strong> or <strong>#3dweb</strong> tags to find info about Verge3D framework as well as recent updates from the 3D web industry.</p>
+      Также используйте теги <strong> #verge3d </strong> или <strong> #3dweb </strong>, чтобы найти информацию о платформе Verge3D, а также о последних обновлениях в 3D-веб-индустрии. </p>
     </p>
 
 
     [anchor:verge3d_reviews]
 
-    <h2>Verge3D Reviews</h2>
+    <h2>Отзывы о Verge3D</h2>
 
-    <p>Verge3D is presented on several review and product comparison websites. We would really like to know what you think and appreciate honest feedback from you!</p>
+    <p>Verge3D представлен на нескольких сайтах с обзорами и сравнениями продуктов. Нам очень хотелось бы знать, что вы думаете и мы ценим честные отзывы от вас!</p>
 
     <ul>
       <li>
-        [link:https://www.soft8soft.com/store/ Verge3D Store] — click on the product to see user reviews.
+        [link:https://www.soft8soft.com/store/ Verge3D Store] — нажмите на продукт, чтобы увидеть отзывы пользователей.
       </li>
       <li>
-        [link:https://alternativeto.net/software/verge3d/ Verge3D on AlternativeTo].
+        [link:https://alternativeto.net/software/verge3d/ Verge3D на AlternativeTo].
       </li>
       <li>
-        [link:https://www.g2.com/products/soft8soft-llc-verge3d/reviews Verge3D reviews on G2].
+        [link:https://www.g2.com/products/soft8soft-llc-verge3d/reviews отзывы о Verge3D на G2].
       </li>
       <li>
-        [link:https://www.producthunt.com/posts/verge3d Product Hunt] page.
+        [link:https://www.producthunt.com/posts/verge3d Product Hunt] страница.
       </li>
       <li>
-        [link:https://alternative.me/verge3d Alternative.me] — website similar to AlternativeTo.
+        [link:https://alternative.me/verge3d Alternative.me] — сайт, похожий на AlternativeTo.
       </li>
     </ul>
 
@@ -126,22 +125,22 @@
 
     [anchor:demos_and_examples]
 
-    <h2>Apps, Demos and Examples</h2>
+    <h2>Приложения, демонстрации и примеры</h2>
 
-    <p>Check out to see what Verge3D is capable of:</p>
+    <p>Узнайте, на что способен Verge3D:</p>
 
     <ul>
       <li>
-        [link:https://www.soft8soft.com/gallery/ Gallery] — the gallery of applications made with Verge3D. This is a good starting point to grasp Verge3D features and capabilities.
+        [link:https://www.soft8soft.com/ru/%d1%81%d0%b4%d0%b5%d0%bb%d0%b0%d0%bd%d0%be-%d0%bd%d0%b0-verge3d/ Галерея] — галерея приложений, созданных с помощью Verge3D. Это хорошая возможность узнать о функциях и возможностях Verge3D.
       </li>
       <li>
-        [link:https://www.soft8soft.com/get-verge3d/ Verge3D distributions] come with sources of the demo applications from our Gallery.
+        [link:https://www.soft8soft.com/ru/%d1%81%d0%ba%d0%b0%d1%87%d0%b0%d1%82%d1%8c-verge3d/ дистрибутивы Verge3D] поставляются с исходниками демонстрационных приложений из нашей Галереи.
       </li>
       <li>
-        [link:https://cdn.soft8soft.com/demo/examples/index.html Verge3D code examples] — examples for JavaScript coders.
+        [link:https://cdn.soft8soft.com/demo/examples/index.html примеры кода на Verge3D] — примеры для программистов JavaScript
       </li>
       <li>
-        [link:https://sandbox.soft8soft.com/ Verge3D for Wordpress sandbox] — use this website to try out Verge3D's publishing, remote storage and e-commerce features.
+        [link:https://sandbox.soft8soft.com/ песочница Verge3D и  Wordpress ] — используйте этот веб-сайт, чтобы опробовать возможности Verge3D для публикации, удаленного хранения и электронной коммерции.
       </li>
     </ul>
 
@@ -150,63 +149,62 @@
 
     <h2>Blender, 3ds Max, Maya</h2>
     <ul>
-      <li><a href="https://docs.blender.org/manual/en/latest/" target="_blank">Blender Reference Manual</a> — official Blender manual.</li>
-      <li><a href="http://help.autodesk.com/view/3DSMAX/2020/ENU/" target="_blank">3ds Max Learning Center</a> — comprehensive 3ds Max guide from Autodesk.</li>
-      <li><a href="https://help.autodesk.com/view/MAYAUL/2020/ENU/" target="_blank">Maya Help</a> — official guide for using Autodesk Maya.</li>
+      <li><a href="https://docs.blender.org/manual/en/latest/" target="_blank">Blender Reference Manual</a> — официальное руководство по Blender.</li>
+      <li><a href="http://help.autodesk.com/view/3DSMAX/2020/ENU/" target="_blank">3ds Max Learning Center</a> — подробное руководство по 3ds Max от Autodesk.</li>
+      <li><a href="https://help.autodesk.com/view/MAYAUL/2020/ENU/" target="_blank">Maya Help</a> — официальное руководство по использованию Autodesk Maya.</li>
     </ul>
 
 
     [anchor:help_with_api]
 
-    <h2>Help with API</h2>
+    <h2>Помощь с API</h2>
     <p>
-      Just Google "How to do ... in three.js" and with 99% probability you will be able do the same with Verge3D since we're trying to maintain API compatibility between the two frameworks.
-    </p>
+      Просто погуглите «Как сделать ... в three.js», и, с вероятностью 99%, вы сможете сделать то же самое с Verge3D, поскольку мы пытаемся поддерживать совместимость API между двумя фреймворками.    </p>
 
 
     [anchor:browser_technologies]
 
-    <h2>Browser Technologies — WebGL, WebXR etc</h2>
+    <h2>Технологии браузера — WebGL, WebXR и т.д.</h2>
     <ul>
       <li>
-        [link:https://www.soft8soft.com/webgl-supported-browsers-and-troubleshooting/ WebGL supported browsers and troubleshooting] — this is your first aid kit in case of any issues with WebGL support.
+        [link:https://www.soft8soft.com/webgl-supported-browsers-and-troubleshooting/ WebGL supported browsers and troubleshooting] - это ваша аптечка на случай возникновения проблем с поддержкой WebGL.
       </li>
       <li>
-        [link:https://www.soft8soft.com/webglreport/ WebGL System Report] — check what your system is capable of.
+        [link:https://www.soft8soft.com/webglreport/ WebGL System Report] — проверьте, на что способна ваша система.
       </li>
       <li>
-        [link:https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/WebGL_best_practices WebGL Best Practices] — recommended ways to use WebGL.
+        [link:https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/WebGL_best_practices WebGL Best Practices] — рекомендации по работе с WebGL
       </li>
       <li>
-        [link:https://www.soft8soft.com/gamepad_diagnostics/gamepad_diagnostics.html Gamepad Diagnostics Tool] — Interactive Gamepad API diagnostics tool. Check if your device is compatible and retrieve the model, axes, buttons and other information for use with Verge3D.
+        [link:https://www.soft8soft.com/gamepad_diagnostics/gamepad_diagnostics.html Gamepad Diagnostics Tool] — инструмент интерактивной диагностики Gamepad API. Проверьте, совместимо ли ваше устройство. Узнайте о модели, осях, кнопках и получите иную информацию для использования с Verge3D.
       </li>
       <li>
-        [link:https://immersive-web.github.io/webxr/ WebXR Device API] — official WebXR specification.
+        [link:https://immersive-web.github.io/webxr/ WebXR Device API] — официальная спецификация WebXR.
       </li>
       <li>
-        [link:https://immersive-web.github.io/webxr-samples/ WebXR Samples] — official WebXR examples, include both AR and VR demos.</a>
+        [link:https://immersive-web.github.io/webxr-samples/ WebXR Samples] — официальные примеры WebXR включают демонстрации как AR, так и VR.</a>
       </li>
     </ul>
 
 
     [anchor:browser_development]
 
-    <h2>Browser Development Progress and Bug Trackers</h2>
+    <h2>Прогресс разработки браузера и средства отслеживания ошибок</h2>
 
-    <p>Important resources to follow the browser development progress and roadmaps:</p>
+    <p>Важные ресурсы для отслеживания прогресса разработки браузера и планов разработчиков:</p>
 
     <ul>
       <li>
-        [link:https://chromestatus.com/features Chrome Platform Status] — Google Chrome development status.
+        [link:https://chromestatus.com/features Chrome Platform Status] — статус разработки Google Chrome.
       </li>
       <li>
-        [link:https://bugs.chromium.org/p/chromium/issues/list Chromium Issues] — official Chrome/Chromium bug tracker.
+        [link:https://bugs.chromium.org/p/chromium/issues/list Chromium Issues] — официальный трекер ошибок Chrome/Chromium.
       </li>
       <li>
-        [link:https://platform-status.mozilla.org/ Firefox Platform Status] — Mozilla Firefox development status and roadmap.
+        [link:https://platform-status.mozilla.org/ Firefox Platform Status] — статус разработки Mozilla Firefox и план развития.
       </li>
       <li>
-        [link:https://webkit.org/status/ WebKit Feature Status] — Safari/WebKit development status.
+        [link:https://webkit.org/status/ WebKit Feature Status] — Статус разработки Safari/WebKit.
       </li>
       <li>
         [link:https://developer.microsoft.com/en-us/microsoft-edge/status/ Microsoft Edge Platform Status].
@@ -216,9 +214,9 @@
 
     [anchor:gpu]
 
-    <h2>Graphics Processing Units (GPUs)</h2>
+    <h2>Графические процессоры (GPU)</h2>
 
-    <p>Wikipedia contains very useful articles with GPU specs:</p>
+    <p>В Википедии есть очень полезные статьи со спецификациями GPU:</p>
 
     <ul>
       <li>
@@ -239,9 +237,9 @@
     </ul>
 
 
-    <h2>Got Anything to Share?</h2>
+    <h2>Есть чем поделиться?</h2>
 
-    <p>Feel free to propose on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Расскажите об этом на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
